@@ -1,18 +1,9 @@
 package gt.model;
 
-import java.security.Key;
-
-import javax.crypto.Cipher;
-import javax.crypto.spec.SecretKeySpec;
-
-import Decoder.BASE64Decoder;
-import Decoder.BASE64Encoder;
+import org.apache.commons.codec.binary.Base64;
 
 public class Criptatore {
 	private static Criptatore instance;
-	private static final String ALGORITHM = "AES";
-	private static final byte[] keyValue = 
-	    new byte[] { 'T', 'h', 'i', 's', 'I', 's', 'A', 'S', 'e', 'c', 'r', 'e', 't', 'K', 'e', 'y' };
 
 	private Criptatore(){}
 	public static synchronized Criptatore getInstance(){
@@ -21,27 +12,14 @@ public class Criptatore {
 		} 
 		return instance;
 	}
-	 public String codifica(String valueToEnc) throws Exception {
-	    Key key = generateKey();
-	    Cipher c = Cipher.getInstance(ALGORITHM);
-	    c.init(Cipher.ENCRYPT_MODE, key);
-	    byte[] encValue = c.doFinal(valueToEnc.getBytes());
-	    String encryptedValue = new BASE64Encoder().encode(encValue);
-	    return encryptedValue;
-	}
-
-	public String decodifica(String encryptedValue) throws Exception {
-	    Key key = generateKey();
-	    Cipher c = Cipher.getInstance(ALGORITHM);
-	    c.init(Cipher.DECRYPT_MODE, key);
-	    byte[] decordedValue = new BASE64Decoder().decodeBuffer(encryptedValue);
-	    byte[] decValue = c.doFinal(decordedValue);
-	    String decryptedValue = new String(decValue);
-	    return decryptedValue;
-	}
-
-	private static Key generateKey() throws Exception {
-	    Key key = new SecretKeySpec(keyValue, ALGORITHM);
-	    return key;
+	public String codifica(String daCod){
+		// CODIFICA BASE64
+	    byte[] encoded = Base64.encodeBase64(daCod.getBytes()); 
+	    return new String(encoded);
+	} 
+	public String decodifica(String daDec){
+	    // DECODIFICA BASE64
+	    byte[] decoded = Base64.decodeBase64(daDec.getBytes()); 
+	    return new String(decoded);
 	}
 }
